Experimental Fake Psi elements for .code and .bind  for resolve & docs (should fix #1231)